chore: user list doc
